# recognizer

./: .gitignore  INSTALLATION.md  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  linting.yml  release_workflow.yml  tests.yml
examples/: demo_botright.py  demo_detect.py  demo_normal_playwright.py  demo_patchright.py
recaptcha_challenger/: __init__.py  utils.py
recaptcha_challenger/agents/: exceptions.py
recaptcha_challenger/agents/playwright/: __init__.py  control.py
recaptcha_challenger/components/: __init__.py  detector.py  image_processor.py  prompt_handler.py
recaptcha_challenger/examples/: demo_detect.py
recognizer/: __init__.py
recognizer/agents/playwright/: __init__.py  async_control.py  sync_control.py
recognizer/components/: detection_processor.py  detector.py  image_processor.py  prompt_handler.py
tests/: conftest.py  test_detector.py  test_inputs.py  test_playwright_async.py  test_playwright_sync.py  test_recaptcha_sites.py
