[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recognizer"
description = "Gracefully face reCAPTCHA challenges with YOLO/CLIP via Playwright or an easy API"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8,<3.13"
authors = [{name = "Vinyzu"}]
version = "1.4.0"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "opencv-python>=4.10.0,<5.0.0", 
    "pillow>=8.3.2,<12.0.0",
    "imageio>=2.36.1,<3.0.0",
    "ultralytics>=8.3.0,<8.3.50", 
    "transformers>=4.48.0,<5.0.0",
    "playwright>=1.49.1,<2.0.0",
    "patchright>=1.49.1,<2.0.0"
]

[project.urls]
Homepage = "https://github.com/Vinyzu/recognizer"
Repository = "https://github.com/Vinyzu/recognizer"
Issues = "https://github.com/Vinyzu/recognizer/issues"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
mypy_path = "recognizer"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length = 200

[tool.isort]
py_version = 310
line_length = 200
multi_line_output = 7

[tool.ruff]
line-length = 200
