[metadata]
name = recognizer
version = attr: recognizer.VERSION
description = 🦉Gracefully face reCAPTCHA challenge with ultralytics YOLOv8-seg, CLIPs VIT-B/16 and CLIP-Seg/RD64. Implemented in playwright or an easy-to-use API.
long_description = file: README.md
long_description_content_type = text/markdown
author = Vinyzu
url = https://github.com/Vinyzu/recognizer
license = GNU General Public License v3.0
license_file = LICENSE
keywords = botright, playwright, browser, automation, fingerprints, fingerprinting, dataset, data, recaptcha, captcha
project_urls =
    Source = https://github.com/Vinyzu/reCognizer
    Tracker = https://github.com/Vinyzu/reCognizer/issues
classifiers =
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: Browsers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = no
python_requires = >=3.8
packages = find:
install_requires =
    opencv-python
    imageio
    ultralytics
    transformers
    numpy
    playwright

[options.package_data]
* = requirements.txt

[options.packages.find]
include = recognizer, recognizer.*, LICENSE
exclude = tests, .github

[options.extras_require]
testing =
    pytest
    mypy
    flake8
    black
    isort